--- a/.classpath
+++ b/.classpath
@@ -29,5 +29,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/Users/gim-yuncheol-second/eclipse/jee-latest-released/Eclipse.app/Contents/Eclipse/lombok.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
