--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@
 		<param-value>classpath:/spring/applicationContext-root.xml</param-value>
 	</context-param>
 	
-	<listener> <!--  발생하는 이벤트를 수신해 처리하는 리스너로 넘겨줌. -->
+	<listener> <!--  발생하는 이벤트를 수신해 처리하는 리스너로 넘겨줌. 여기에 등록되지 않은 리스너들은 수신하지 못함.-->
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 	
@@ -31,4 +31,23 @@
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	<!--한글이 깨지지 않게 해주는 필터 -->
+	<filter>
+		<filter-name>encodingFilter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+		<init-param>
+			<param-name>forceEncoding</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>encodingFilter</filter-name>
+		<servlet-name>appServlet</servlet-name>
+	</filter-mapping>
+	
 </web-app>
